spacing fix

--- a/css/sass/_layout.scss
+++ b/css/sass/_layout.scss
@@ -178,7 +178,7 @@
         font-size: 20px;
     }
     .img-project{
-        max-width: 240px !important
+        max-width: 220px !important
     }
     .container-item:nth-child(2){
         margin: 40px 0px;
