--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ body {
     font-size: 20px;
   }
   .img-project {
-    max-width: 240px !important;
+    max-width: 220px !important;
   }
   .container-item:nth-child(2) {
     margin: 40px 0px;
